<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainOverviewFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/yearOverview"
        style="@style/MainOverViewCardYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBtnYearLeft"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="LeftArrow"
                android:src="@drawable/ic_arrow_left"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@+id/tvYear"
                app:layout_constraintEnd_toStartOf="@+id/tvYear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvYear" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBtnYearRight"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="RightArrow"
                android:src="@drawable/ic_arrow_right"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="@+id/tvYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvYear"
                app:layout_constraintTop_toTopOf="@+id/tvYear" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYear"
                style="@style/MainOverViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvYear_MAINOVERVIEW"
                app:layout_constraintBottom_toTopOf="@+id/llIncome"
                app:layout_constraintEnd_toStartOf="@+id/imgBtnYearRight"
                app:layout_constraintStart_toEndOf="@+id/imgBtnYearLeft"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llIncome"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="@dimen/default_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/llGastos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYear">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MainOverViewTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvIncomes" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvIncomes"
                    style="@style/YearIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2000" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llGastos"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="@dimen/default_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/llIncome"
                app:layout_constraintTop_toBottomOf="@+id/tvYear">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/MainOverViewTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvGastos" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGastos"
                    style="@style/YearExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1500" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/monthOverview"
        style="@style/MainOverViewCardMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/yearOverview">

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rvMonthOverview"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            tools:itemCount="1"-->
<!--            tools:listitem="@layout/item_month_overview" />-->

        <include android:id="@+id/currentMonth" layout="@layout/item_month_overview" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dayOverview"
        style="@style/MainOverViewCardCurrentDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/monthOverview">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tblTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tabContentDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tblTransactions" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>